<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HotelActivity">

    <item
        android:id="@+id/action_search"
        android:title="@string/acao_pesquisar"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="collapseActionView|always"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item
        android:id="@+id/action_new"
        android:title="@string/acao_novo"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/action_info"
        android:title="@string/acao_info"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="never"/>
</menu>